Fix alignment in editor.

--- a/style-editor.scss
+++ b/style-editor.scss
@@ -33,8 +33,8 @@ body {
 		.editor-post-title__block,
 		.editor-default-block-appender,
 		.editor-block-list__block {
-			margin-left: 0;
-			margin-right: 0;
+			margin-left: auto;
+			margin-right: auto;
 		}
 
 		.wp-block[data-align="wide"] {
